generalize cmd parser and support context as cmd and as activity param